--- a/package.json
+++ b/package.json
@@ -5,6 +5,12 @@
     "react-dom": "^15.5.4"
   },
   "devDependencies": {
+    "eslint": "^4.5.0",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "react-scripts": "0.9.5"
   },
   "scripts": {
