--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
     "react-router-dom": "^4.1.2"
   },
   "devDependencies": {
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "react-scripts": "0.9.5"
   },
   "scripts": {
